[WebGL] REGRESSION (r262366): Google search photos do not render, black images https://bugs.webkit.org/show_bug.cgi?id=214156 <rdar://problem/64964922>

Reviewed by Dean Jackson.

http://trac.webkit.org/changeset/262366 separated WebGL canvas contents swapping and presentation
into two steps. This Google search page was only running the presentation code without the swapping
step, as it removes canvases from the observer Document before the Document is able to swap its canvas'
contents. Ensure that re-inserted canvas elements properly register their new Documents as observers.

Covered by existing tests.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::insertedIntoAncestor):
* html/HTMLCanvasElement.h:


Canonical link: https://commits.webkit.org/227096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264334 268f45cc-cd09-0410-ab3c-d52691b4dbfc